<resources>
    <string name="app_name">Molar</string>

    //Menu Paciente Layout
    <string name="pacienteLayout_tv1">Hola! Bievenido a Molar</string>
    <string name="pacienteLayout_tv2">[Nombre Usuario]</string>
    <string name="pacienteLayout_tv3">Servicios que ofrecemos</string>
    <string name="pacienteLayout_tv4">Proximas citas</string>
    <string name="pacienteLayout_imgBtn">ImagenButtoon</string>
    <string name="pacienteLayout_tv5">Gestiona tus citas Dentales más rápido</string>
    <string name="pacienteLayout_tv6">Confía en nosotros, y te demostraremos nuestro potencial</string>
    <string name="title_activity_termino_condiciones_layout">terminoCondicionesLayout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>