<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menuPacienteLayout">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menuPacienteLayout_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pacienteLayout_tv1" />

            <TextView
                android:id="@+id/menuPacienteLayout_tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pacienteLayout_tv2" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:background="@drawable/roundedbutton"
            android:contentDescription="@string/pacienteLayout_imgBtn"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.31">

        <TextView
            android:id="@+id/menuPacienteLayout_tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pacienteLayout_tv3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="25dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#8F4949"
                android:contentDescription="@string/pacienteLayout_imgBtn"
                tools:srcCompat="@mipmap/menupacientelayout_servicio1" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="25dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:contentDescription="@string/pacienteLayout_imgBtn"
                android:background="@drawable/roundedbutton"
                tools:srcCompat="@mipmap/menupacientelayout_servicio2" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="25dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:contentDescription="@string/pacienteLayout_imgBtn"
                android:background="@drawable/roundedbutton"
                tools:srcCompat="@mipmap/menupacientelayout_servicio3" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="25dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:contentDescription="@string/pacienteLayout_imgBtn"
                android:background="@drawable/roundedbutton"
                tools:srcCompat="@mipmap/menupacientelayout_servicio4" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/menuPacienteLayout_tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pacienteLayout_tv4" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>