<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.patient.controller_patient_MenuPaciente">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/menuPacienteLayout_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pacienteLayout_tv1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tvNombre_doctor_MenuDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pacienteLayout_tv2"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/patient_menu_ibAjustesCuenta"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:background="@drawable/roundedbutton"
            android:contentDescription="@string/pacienteLayout_imgBtn"
            android:onClick="ajustesCuenta"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/menu_patient_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/menuPacienteLayout_tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/pacienteLayout_tv4"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="20dp">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu_patient_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_menu_patient"
        app:itemIconTint="@drawable/selector_menu_patient_text_icon"
        app:itemTextColor="@drawable/selector_menu_patient_text_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_patient" />

</androidx.constraintlayout.widget.ConstraintLayout>