<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.patient.controller_patient_MenuPaciente">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/menuPacienteLayout_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pacienteLayout_tv1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/menuPacienteLayout_tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pacienteLayout_tv2"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:background="@drawable/roundedbutton"
            android:contentDescription="@string/pacienteLayout_imgBtn"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.31">

        <TextView
            android:id="@+id/menuPacienteLayout_tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/pacienteLayout_tv3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="25dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#DCEDF9"
                android:contentDescription="@string/pacienteLayout_imgBtn"
                android:src="@mipmap/menupacientelayout_servicio1" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="25dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#FAF0DB"
                android:contentDescription="@string/pacienteLayout_imgBtn"
                android:padding="5dp"
                android:src="@mipmap/menupacientelayout_servicio2" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="25dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#D6F6FF"
                android:contentDescription="@string/pacienteLayout_imgBtn"
                android:src="@mipmap/menupacientelayout_servicio3" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="25dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#F2E3E9"
                android:contentDescription="@string/pacienteLayout_imgBtn"
                android:src="@mipmap/menupacientelayout_servicio4" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:padding="10dp"
            app:cardBackgroundColor="#DCEDF9"
            app:cardCornerRadius="25dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/pacienteLayout_tv5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.202" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/pacienteLayout_tv6"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.265" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@mipmap/menupacientelayout_ivdoctora" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/menuPacienteLayout_tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/pacienteLayout_tv4"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>